cloudformation/eks_cluster_template.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Levanta un cluster de prueba en EKS'
Parameters:
  EKSClusterName:
    Description: Nombre del cluster de EKS
    Type: String
    Default: kubernetes-demo
  EKSClusterVersion:
    Description: Versión del cluster de EKS
    Type: String
    Default: latest
    AllowedValues:
      - "1.10"
      - "1.11"
      - "1.12"
      - "1.13"
      - "latest"
  EKSClusterNodeAutoScalingGroupMinSize:
    Type: Number
    Description: Minimum size of Node Group ASG.
    Default: 1
  EKSClusterNodeAutoScalingGroupMaxSize:
    Type: Number
    Description: Maximum size of Node Group ASG. Set to at least 1 greater than NodeAutoScalingGroupDesiredCapacity.
    Default: 4
  EKSClusterNodeAutoScalingGroupDesiredCapacity:
    Type: Number
    Description: Desired capacity of Node Group ASG.
    Default: 2
  EKSClusterNodeVolumeSize:
    Type: Number
    Description: Node volume size.
    Default: 20
  EKSClusterNodeImageId:
    Type: String
    Description: Node image id.
  EKSClusterNodeInstanceType:
    Type: String
    Description: Node instance type.
  EKSClusterNodeKeyName:
    Type: String
    Description: Node ssh key name.
  EKSClusterEnvironment:
    Type: String
    Description: EKS Cluster environment.
    Default: development
  EKSClusterNodeMemoryReseved:
    Type: String
    Description: Memory reserved for kubelet on nodes.
    Default: 0.2Gi
Resources:
  # --- AWS EKS Cluster Role
  EKSClusterAdminInstanceNode:
    Type: AWS::IAM::Role
    Properties: 
      AssumeRolePolicyDocument: 
        Version: "2012-10-17"
        Statement: 
          - Effect: "Allow"
            Principal: 
              Service: 
                - "eks.amazonaws.com"
            Action: 
              - "sts:AssumeRole"
      Path: "/"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
        - arn:aws:iam::aws:policy/AmazonEKSServicePolicy
      RoleName: !Sub "EKSClusterAdminInstanceNode-${EKSClusterName}"
  # --- AWS EKS Cluster Node Instance Role
  EKSClusterNodeInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: "/"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
        - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
  # --- AWS EKS Cluster Node Instance Profile
  EKSClusterNodeInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
      - !Ref EKSClusterNodeInstanceRole
  # --- AWS EKS Cluster VPC
  EKSClusterVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: !Sub "EKSClusterVPC-${EKSClusterName}"
        - Key: Project
          Value: !Ref EKSClusterName
  # --- AWS EKS VPC Internet Gateway
  EKSClusterVPCInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "EKSClusterVPCInternetGateway-${EKSClusterName}"
        - Key: Project
          Value: !Ref EKSClusterName
  # --- AWS EKS Cluster VPC Internet Gateway Attachment
  EKSClusterVPCInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref EKSClusterVPC
      InternetGatewayId: !Ref EKSClusterVPCInternetGateway
  # --- AWS EKS Public Subnet A
  EKSClusterPublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref EKSClusterVPC
      CidrBlock: 10.0.0.0/21
      AvailabilityZone: "us-east-1a"
      Tags:
        - Key: Name
          Value: !Sub "EKSClusterPublicSubnetA-${EKSClusterName}"
        - Key: Project
          Value: !Ref EKSClusterName
  # --- AWS EKS Public Subnet B
  EKSClusterPublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref EKSClusterVPC
      CidrBlock: 10.0.8.0/21
      AvailabilityZone: "us-east-1b"
      Tags:
        - Key: Name
          Value: !Sub "EKSClusterPublicSubnetB-${EKSClusterName}"
        - Key: Project
          Value: !Ref EKSClusterName
        - Key: KubernetesCluster
          Value: !Ref EKSClusterName
        - Key: 'kubernetes.io/role/elb'
          Value: ''
  # --- AWS EKS Public Subnet C
  EKSClusterPublicSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref EKSClusterVPC
      CidrBlock: 10.0.16.0/21
      AvailabilityZone: "us-east-1c"
      Tags:
        - Key: Name
          Value: !Sub "EKSClusterPublicSubnetC-${EKSClusterName}"
        - Key: Project
          Value: !Ref EKSClusterName
        - Key: KubernetesCluster
          Value: !Ref EKSClusterName
        - Key: 'kubernetes.io/role/elb'
          Value: ''
  # --- AWS EKS Public Route Table
  EKSClusterPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref EKSClusterVPC
      Tags:
        - Key: Name
          Value: !Sub "EKSClusterPublicRouteTable-${EKSClusterName}"
        - Key: Project
          Value: !Ref EKSClusterName
        - Key: KubernetesCluster
          Value: !Ref EKSClusterName
        - Key: 'kubernetes.io/role/elb'
          Value: ''
  # --- AWS EKS Public Subnet A Association
  EKSClusterPublicRouteTableSubnetAAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref EKSClusterPublicSubnetA
      RouteTableId: !Ref EKSClusterPublicRouteTable
  # --- AWS EKS Public Subnet B Association
  EKSClusterPublicRouteTableSubnetBAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref EKSClusterPublicSubnetB
      RouteTableId: !Ref EKSClusterPublicRouteTable
  # --- AWS EKS Public Subnet C Association
  EKSClusterPublicRouteTableSubnetCAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref EKSClusterPublicSubnetC
      RouteTableId: !Ref EKSClusterPublicRouteTable
  # --- AWS EKS Public Subnet Route to Interent Gateway
  EKSClusterPublicDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: EKSClusterVPCInternetGateway
    Properties:
      RouteTableId: !Ref EKSClusterPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref EKSClusterVPCInternetGateway
  # --- AWS EKS Private Subnet A
  EKSClusterPrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref EKSClusterVPC
      CidrBlock: 10.0.32.0/19
      AvailabilityZone: "us-east-1a"
      Tags:
        - Key: Name
          Value: !Sub "EKSClusterPrivateSubnetA-${EKSClusterName}"
        - Key: Project
          Value: !Ref EKSClusterName
        - Key: KubernetesCluster
          Value: !Ref EKSClusterName
        - Key: 'kubernetes.io/role/internal-elb'
          Value: ''
  # --- AWS EKS Private Subnet B
  EKSClusterPrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref EKSClusterVPC
      CidrBlock: 10.0.64.0/19
      AvailabilityZone: "us-east-1b"
      Tags:
        - Key: Name
          Value: !Sub "EKSClusterPrivateSubnetB-${EKSClusterName}"
        - Key: Project
          Value: !Ref EKSClusterName
        - Key: KubernetesCluster
          Value: !Ref EKSClusterName
        - Key: 'kubernetes.io/role/internal-elb'
          Value: ''
  # --- AWS EKS Private Subnet C
  EKSClusterPrivateSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref EKSClusterVPC
      CidrBlock: 10.0.96.0/19
      AvailabilityZone: "us-east-1c"
      Tags:
        - Key: Name
          Value: !Sub "EKSClusterPrivateSubnetC-${EKSClusterName}"
        - Key: Project
          Value: !Ref EKSClusterName
        - Key: KubernetesCluster
          Value: !Ref EKSClusterName
        - Key: 'kubernetes.io/role/internal-elb'
          Value: ''
  # --- AWS EKS Private Route Table
  EKSClusterPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref EKSClusterVPC
      Tags:
        - Key: Name
          Value: !Sub "EKSClusterPrivateRouteTable-${EKSClusterName}"
        - Key: Project
          Value: !Ref EKSClusterName
  # --- AWS EKS Private Subnet A Association
  EKSClusterPrivateRouteTableSubnetAAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref EKSClusterPrivateSubnetA
      RouteTableId: !Ref EKSClusterPrivateRouteTable
  # --- AWS EKS Private Subnet B Association
  EKSClusterPrivateRouteTableSubnetBAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref EKSClusterPrivateSubnetB
      RouteTableId: !Ref EKSClusterPrivateRouteTable
  # --- AWS EKS Private Subnet C Association
  EKSClusterPrivateRouteTableSubnetCAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref EKSClusterPrivateSubnetC
      RouteTableId: !Ref EKSClusterPrivateRouteTable
  # --- AWS EKS Cluster Security Group
  EKSClusterSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: EKSClusterSecurityGroup
      GroupDescription: AWS EKS Cluster Security Group
      VpcId: !Ref EKSClusterVPC
      Tags:
        - Key: Name
          Value: !Sub "EKSClusterSecurityGroup-${EKSClusterName}"
        - Key: Project
          Value: !Ref EKSClusterName
  # --- AWS EKS Cluster Node Security Group
  EKSClusterNodeSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: EKSClusterNodeSecurityGroup
      GroupDescription: Security group for all nodes in the cluster
      VpcId: !Ref EKSClusterVPC
      Tags:
        - Key: Name
          Value: !Sub "EKSClusterNodeSecurityGroup-${EKSClusterName}"
        - Key: Project
          Value: !Ref EKSClusterName
        - Key: !Sub "kubernetes.io/cluster/${EKSClusterName}"
          Value: 'owned'
  # --- AWS Cluster Security Group configuration
  EKSClusterNodeSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn: EKSClusterNodeSecurityGroup
    Properties:
      Description: Allow node to communicate with each other
      GroupId: !Ref EKSClusterNodeSecurityGroup
      SourceSecurityGroupId: !Ref EKSClusterNodeSecurityGroup
      IpProtocol: '-1'
      FromPort: 0
      ToPort: 65535
  EKSClusterNodeSecurityGroupFromControlPlaneIngress:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn: EKSClusterNodeSecurityGroup
    Properties:
      Description: Allow worker Kubelets and pods to receive communication from the cluster control plane
      GroupId: !Ref EKSClusterNodeSecurityGroup
      SourceSecurityGroupId: !Ref EKSClusterSecurityGroup
      IpProtocol: tcp
      FromPort: 1025
      ToPort: 65535
  EKSClusterControlPlaneEgressToNodeSecurityGroup:
    Type: AWS::EC2::SecurityGroupEgress
    DependsOn: EKSClusterNodeSecurityGroup
    Properties:
      Description: Allow the cluster control plane to communicate with worker Kubelet and pods
      GroupId: !Ref EKSClusterSecurityGroup
      DestinationSecurityGroupId: !Ref EKSClusterNodeSecurityGroup
      IpProtocol: tcp
      FromPort: 1025
      ToPort: 65535
  EKSClusterNodeSecurityGroupFromControlPlaneOn443Ingress:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn: EKSClusterNodeSecurityGroup
    Properties:
      Description: Allow pods running extension API servers on port 443 to receive communication from cluster control plane
      GroupId: !Ref EKSClusterNodeSecurityGroup
      SourceSecurityGroupId: !Ref EKSClusterSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
  EKSClusterControlPlaneEgressToNodeSecurityGroupOn443:
    Type: AWS::EC2::SecurityGroupEgress
    DependsOn: EKSClusterNodeSecurityGroup
    Properties:
      Description: Allow the cluster control plane to communicate with pods running extension API servers on port 443
      GroupId: !Ref EKSClusterSecurityGroup
      DestinationSecurityGroupId: !Ref EKSClusterNodeSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
  EKSClusterClusterControlPlaneSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn: EKSClusterNodeSecurityGroup
    Properties:
      Description: Allow pods to communicate with the cluster API Server
      GroupId: !Ref EKSClusterSecurityGroup
      SourceSecurityGroupId: !Ref EKSClusterNodeSecurityGroup
      IpProtocol: tcp
      ToPort: 443
      FromPort: 443
  # --- AWS EKS Cluster Node Launch Config
  EKSClusterNodeLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      AssociatePublicIpAddress: 'true'
      IamInstanceProfile: !Ref EKSClusterNodeInstanceProfile
      ImageId: !Ref EKSClusterNodeImageId
      InstanceType: !Ref EKSClusterNodeInstanceType
      KeyName: !Ref EKSClusterNodeKeyName
      SecurityGroups:
        - !Ref EKSClusterNodeSecurityGroup
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: !Ref EKSClusterNodeVolumeSize
            VolumeType: gp2
            DeleteOnTermination: true
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
 
            # Sysctl changes
            ## Disable IPv6
            cat <<EOF > /etc/sysctl.d/10-disable-ipv6.conf
            # disable ipv6 config
            net.ipv6.conf.all.disable_ipv6 = 1
            net.ipv6.conf.default.disable_ipv6 = 1
            net.ipv6.conf.lo.disable_ipv6 = 1
            EOF
            
            ## Kube network optimisation.
            ## Stolen from this guy: https://blog.codeship.com/running-1000-containers-in-docker-swarm/
            cat <<EOF > /etc/sysctl.d/99-kube-net.conf
            # Have a larger connection range available
            net.ipv4.ip_local_port_range=1024 65000
            
            # Reuse closed sockets faster
            net.ipv4.tcp_tw_reuse=1
            net.ipv4.tcp_fin_timeout=15
            
            # The maximum number of "backlogged sockets".  Default is 128.
            net.core.somaxconn=4096
            net.core.netdev_max_backlog=4096
            
            # 16MB per socket - which sounds like a lot,
            # but will virtually never consume that much.
            net.core.rmem_max=16777216
            net.core.wmem_max=16777216
            
            # Various network tunables
            net.ipv4.tcp_max_syn_backlog=20480
            net.ipv4.tcp_max_tw_buckets=400000
            net.ipv4.tcp_no_metrics_save=1
            net.ipv4.tcp_rmem=4096 87380 16777216
            net.ipv4.tcp_syn_retries=2
            net.ipv4.tcp_synack_retries=2
            net.ipv4.tcp_wmem=4096 65536 16777216
            #vm.min_free_kbytes=65536
            
            # Connection tracking to prevent dropped connections (usually issue on LBs)
            net.netfilter.nf_conntrack_max=262144
            net.ipv4.netfilter.ip_conntrack_generic_timeout=120
            net.netfilter.nf_conntrack_tcp_timeout_established=86400
            
            # ARP cache settings for a highly loaded docker swarm
            net.ipv4.neigh.default.gc_thresh1=8096
            net.ipv4.neigh.default.gc_thresh2=12288
            net.ipv4.neigh.default.gc_thresh3=16384
            EOF
            
            systemctl restart systemd-sysctl.service
            
            ## DNS change to limit the 'search' path
            echo "; generated by bootstrap.sh" > /var/lib/kubelet/resolv.conf
            
            if [[ $(ec2-metadata --instance-type) =~ 'large' ]]; then
                mem_reserved=1Gi
            else
                mem_reserved=0.5Gi
            fi
            
            /etc/eks/bootstrap.sh ${EKSClusterName} \
              --kubelet-extra-args \
                  "--node-labels=cluster=${EKSClusterName},nodegroup=EKSClusterNodeGroup-${EKSClusterName},environment=${EKSClusterEnvironment} \
                  --resolv-conf=/var/lib/kubelet/resolv.conf \
                  --kube-reserved cpu=250m,memory=${EKSClusterNodeMemoryReseved},ephemeral-storage=1Gi \
                  --system-reserved cpu=250m,memory=0.2Gi,ephemeral-storage=1Gi \
                  --eviction-hard memory.available<500Mi,nodefs.available<10%"
  # --- AWS EKS Cluster Node Group
  EKSClusterNodeGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      DesiredCapacity: !Ref EKSClusterNodeAutoScalingGroupDesiredCapacity
      LaunchConfigurationName: !Ref EKSClusterNodeLaunchConfig
      MinSize: !Ref EKSClusterNodeAutoScalingGroupMinSize
      MaxSize: !Ref EKSClusterNodeAutoScalingGroupMaxSize
      VPCZoneIdentifier:
        - !Ref EKSClusterPublicSubnetA
        - !Ref EKSClusterPublicSubnetB
        - !Ref EKSClusterPublicSubnetC
      Tags:
        - Key: Name
          Value: !Sub "EKSClusterNodeGroup-${EKSClusterName}"
          PropagateAtLaunch: 'true'
        - Key: Project
          Value: !Ref EKSClusterName
          PropagateAtLaunch: 'true'
        - Key: !Sub 'kubernetes.io/cluster/${EKSClusterName}'
          Value: 'owned'
          PropagateAtLaunch: 'true'
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MaxBatchSize: '1'
        MinInstancesInService: !Ref EKSClusterNodeAutoScalingGroupDesiredCapacity
        PauseTime: 'PT5M'
  # --- AWS EKS Cluster
  EKSCluster:
    Type: AWS::EKS::Cluster
    Properties:
      Name: !Ref EKSClusterName
      Version: !Ref EKSClusterVersion
      RoleArn: !GetAtt EKSClusterAdminInstanceNode.Arn
      ResourcesVpcConfig:
        SecurityGroupIds:
        - !Ref EKSClusterSecurityGroup
        SubnetIds:
        - !Ref EKSClusterPrivateSubnetA
        - !Ref EKSClusterPrivateSubnetB
        - !Ref EKSClusterPrivateSubnetC
Outputs:
  EKSClusterRef:
    Description: Resource name
    Value: !Ref EKSCluster
  EKSClusterArn:
    Description: The ARN of the cluster, such as arn:aws:eks:us-west-2:666666666666:cluster/prod. 
    Value: !GetAtt EKSCluster.Arn
  EKSClusterCertificateAuthorityData:
    Description: The certificate-authority-data for your cluster. 
    Value: !GetAtt EKSCluster.CertificateAuthorityData
  EKSClusterEndpoint:
    Description: The endpoint for your Kubernetes API server
    Value: !GetAtt EKSCluster.Endpoint
  EKSClusterNodeInstanceRoleArn:
    Description: The node instance role
    Value: !GetAtt EKSClusterNodeInstanceRole.Arn
  EKSClusterAdminInstanceNodeArn:
    Description: The admin instance role
    Value: !GetAtt EKSClusterAdminInstanceNode.Arn
  EKSClusterNodeSecurityGroupID:
    Description: The security group for the node group
    Value: !Ref EKSClusterNodeSecurityGroup
